--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
